mobile/scss/modules/lockbox.scss
.lockbox {
  .img-holder{
    img{width: 100%;}
  }
  
  .bar-header  {
      i {
          font-size: 1.8em;
          line-height: 1.55em;;
      }
  }
  
  .bar-subheader {
      background-color: $stable;
      
      padding-top: $padding-base-vertical;
      padding-bottom: $padding-base-vertical;
      
      height: 80px;
      
      h3.title {
        color: $content-body-text;
        white-space: normal;
        height: 80px;
        padding-top: 20px;
      }
  }
  
  ion-pane.lockbox-edit-top.pane{
      top: 128px;
  }
  
  .platform-android &, .platform-ios & {
        ion-pane.pane.content-pane{
            top: 120px;
        }
    }

}
@media only screen
and (max-device-height : 568px) {
    
    .lockbox {
        .bar-subheader h3.title{
            padding-top: 4px;
        }
        .platform-android &, .platform-ios & {
            ion-pane.pane.content-pane{
                top: 108px;
            }
        }
    }
}


// document list
.document-list{
    
    button.button-small.button {
        color: $balanced;
        border-color: $balanced;
        @include list-button;
    }
    
    .doc {
        padding: 10px;
        border: 1px solid $action-text;
        //margin: 5px;
        
        min-height: 150px;
        
        &.blank {
            border: none;
        }
        
        .button-document, .button-stub {
            position: relative;
            top: 70px;
            transform: translateY(-50%);
            
            background: transparent;
            width: 100%;
            //height: 100%;
            
            white-space: normal;
            word-wrap: normal;
            font-weight: 400;
            text-transform: uppercase;
            text-align: center; 
            
            .doc-name {
                font-size: 1.6em;
                line-height: 1.3em;
            }
            
            .doc-date {
                color: $action-text;
            }
            
            .ion, .icon {
                font-size: 1.8em;
            }
        }
        
        // .button-document {
        //     color: $balanced;
        // }
        

        
        .button-stub {
            color: $energized;
        }
        
        &.real-document {
            background-color: $light;
            
            .item-content {
                color: $gradient-bottom;
            }
        }
    
        &.stub-document { 
            box-shadow: inset 1px 1px 15px rgba($action-text, 0.9);
        }
    }
  
  &::last-child {
  border-bottom: 1px solid #D2D2D2;
  }

  .item {
    border-top: 1px solid #D2D2D2;
    padding-left: 62px;
    padding-right: 100px;
    min-height: 70px;

    .item-content{
      text-overflow: initial;
      white-space: normal;

      strong,
      span{display: block;}

      &.no-date{
        strong{
          display: block;
          line-height:30px;
          padding-top:3px;
        }
      }
    }
    
    label.item.item-checkbox.ng-valid{    
      left: 0;
      right: 0;
      top: 0;
      margin: 0;
      bottom: 0;
      padding-right: 0px;
      position: absolute;

      i.checkbox-icon{
        position: absolute;
        top: 50%;
        margin-top: -10px;
        left: 21px;
      }
    }

    .button{
      padding: 0 25px;
      position: absolute;
      right: 16px;
      top: 50%;
      margin-top: -15px;
      z-index: 4;
    }
  }
}


/* action-sheet */
.action-sheet {

  .action-sheet-group{
    background-color:$sheet-options-bg-color;
  }

  .action-sheet-options {
    background:none;

    .action-sheet-option {
       background-color: $sheet-options-bg-color;
       color: $tab-text;
       margin: 2px 0;
    }
  }

  .button{
    font-size: 18px;
    padding: 8px;
  }

  .title {
    color:white;
    font-size: 18px;
  }
}

input.pin-input {
  height: 2em;
  font-size: 2em;
  text-align: center;
}


/* lockbox modal preview */
.preview{
  background-color: transparent;
  top: 5%;
  right: 2%;
  bottom: 5%;
  left: 2%;
  width: 96%;

  .bar{
    .title{
      height: 43px;
      line-height: 44px;
    }
  }

  &.full-screen{
    top: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    left: 0;

    .bar{
      background-color: rgba(0,0,0,0.5);
      height: 44px;

      .button {
        line-height: 44px;
        max-height: 44px;
        color: #fff;
        font-weight: bold;

        &:first-child {
          left: 0;
          padding-left: 8px;
        }

        &:last-child {
          top: 0;
          color: #fff;
          padding-right: 8px;
          right: 0;
          font-weight: 500;
        }
      }
    }
    
    #pdf-view-content{
      margin: 0;
      padding: 0;
      bottom: 44px;
      background: none;

      &.controls-hidden{bottom: 0;}

      .image-container{
        position: static;
        top: auto;
        left: auto;
        right: auto;
        bottom: auto;
      }
    }
  }

  #pdf-view-content{
    background-color: white;

    &.ionic-scroll{height: auto;}

    .image-container{
      top: 2px;
      left: 2px;
      right: 2px;
      bottom: 2px;
      width: auto;
      height: auto;

      div{
        height: 100%;
        width: 100%;
      }
    }
  }

  .bar{
    background-color: transparent;

    .button{
      &.preview-cancel-button, &:last-child {
        font-size: $bar-title-font-size;
        font-weight: $headings-font-weight;
        line-height: $headings-line-height;
        color: $light;
        border: 0;
      }
      
      &:last-child {
        padding-right: 0;
        right: 0;
      }
    }
  }

  .title{
    color:white;
  }

}

.lockbox {
    &.lockbox-edit {
        .content-top {
            padding-left: 0;
            padding-right: 0;
            
            .input-label {
                width: auto;
                text-align: left;
                display: inline-block;
            }
            
            select {
                max-width: unset;
                display: inline-block
                
            }
        }
    }
}

